force-app/main/default/objects/Disbursal_Payee__c/fields/Adjusted_Beneficiary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Beneficiary_Amount__c</fullName>
    <label>Adjusted Beneficiary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>