force-app/main/default/objects/Disbursal_Payee__c/fields/Beneficiary_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Account_Type__c</fullName>
    <label>Beneficiary Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Cash Credit</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
                <isActive>false</isActive>
                <label>Current Account</label>
            </value>
            <value>
                <fullName>KCC Account</fullName>
                <isActive>false</isActive>
                <label>KCC Account</label>
            </value>
            <value>
                <fullName>OverDraft Account</fullName>
                <isActive>false</isActive>
                <label>OverDraft Account</label>
            </value>
            <value>
                <fullName>Saving Account</fullName>
                <isActive>false</isActive>
                <label>Saving Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>