force-app/main/default/objects/Disbursal_Payee__c/fields/Is_Deduct_From__c.field-meta.xml
<CustomField>
    <fullName>Is_Deduct_From__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deduct From</label>
    <type>Checkbox</type>
</CustomField>